NavBar Overlapping Issue
Fixed NavBar overlapping with website content

--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,13 @@ p {
     
 }
 
+html {
+    scroll-padding-top: 62px;/*approx value for our navbar height --> removing website content overlap with navbar*/
+    scroll-behavior: smooth; 
+}
+
+
+
 .logo {
     font-size: 1.8rem;
     font-weight: bold;
@@ -374,7 +381,7 @@ iframe {
     color: #A0D8FF;
 }
 .highlight-3 {
-    color: #FFFBB3;
+    color: #C4A000
 }
 
 /* Responsive Design */
